# ProjectSpace

./: README.md
Contests/2021_GSSOC/: README.md
Contests/2022_GSSOC/: Readme.md
Internships/2021_Widhya/: README.md
Internships/2023_Greenie_Web/: db.json  main.py  readme.md  requirements.txt
Practices/2020_Girus_Remover/: G-Virus Remover.bat  Genamer.py  Readme.md
Practices/2021_Book_Store_System_C_Project/: Book Store System Project.c
Practices/2021_Destreamer_Installer/: Installer.bat  Readme.md  launcher.bat
Practices/2021_Function_Plotter_Python/: README.md  tester.py
Practices/2021_Object_Detection_Python/: Detector.py  Readme.md
Practices/2021_Shopping_Cart_Webapp/: Readme.md  manage.py  requirements.txt
Practices/2021_Topology_API_NodeJS/: Readme.md  Topology_API.js  api_documentation.md  pom.xml
Practices/2022_8086_Assembly/: 01_static_print_loop.asm  02_print_loop_with_string_length.asm  03_Input_and_Output_String_with_Known_Length.asm  Readme.md
Practices/2022_heroku_website/: requirements.txt
Practices/2023_Angular-Docs-Tutorial/: README.md  package-lock.json
Practices/2023_Cat_EyeBalls_Tracker/: hover.js  index.html  readme.md  style.css
Practices/2023_JobScout/: README.md  angular.json  notes.md  package-lock.json  package.json
Practices/2023_Ruby/: Readme.md
Practices/2023_pc_explore/: .pdm.toml  pcconfig.py  pyproject.toml  readme.md
Practices/2023_pc_explore/.web/: package-lock.json  pynecone.json
Practices/2023_pc_explore/.web/pages/: index.js
Practices/2023_pc_explore/pc_explore/: models.py  pc_explore.py
(+227 files in other folders)
